Updated: - Contrast issues in the footer and Postcard.

--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,7 +1,7 @@
 :root {
     --footer-bg: #582974;
     --footer-text-color: #8a8a8a;
-    --footer-link-color: #2011c6;
+    --footer-link-color: #8a8a8a;
     --footer-link-hover: #F9B233;
     --footer-social-icon-color: #FFFFFF;
     --footer-social-icon-hover: #F9B233;
