--- a/src/styles/Postcard.module.css
+++ b/src/styles/Postcard.module.css
@@ -1,129 +1,116 @@
 :root {
   --text-color-white: #FFFFFF;
-  
   --text-color-dark: #f0f0f0;
-  
   --text-color-darker: #d3d0d0;
-  
-  
   --warning-button-hover: #c00909;
-  
   --text-color-primary: #FFFFFF;
-  
   --text-color-secondary: #3a3a3a;
-  
-  
-  
-  
   --button-postcard-text-color: #4a4a4a;
-
   --card-background-color: #ffffffd6;
-
-  --form-button-text-hover-color:#000000;
+  --form-button-text-hover-color: #000000;
 }
 
 .postCard {
-    width: 100%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease-out;
-    position: relative;
-    overflow: hidden;
-    border-radius: 16px;
+  width: 100%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease-out;
+  position: relative;
+  overflow: hidden;
+  border-radius: 16px;
+  margin-bottom: 20px;
+  cursor: pointer;
+  background-color: var(--card-background-color);
+  color: var(--text-color-secondary);
+}
+
+.postCard img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+}
+
+.postCard .btn {
+  padding: 0.25rem 0.5rem;
+  font-size: 0.8rem;
+  margin: 0 5px;
+  min-width: 80px;
+  color: var(--button-postcard-text-color);
+}
+
+.profile {
+  display: flex;
+  align-items: center;
+  padding: 8px 12px;
+  border-bottom: 1px solid var(--commentbox-border);
+}
+
+.profile img {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
+.profile span {
+  margin-right: 10px;
+  font-weight: bold;
+  color: var(--text-color-secondary);
+}
+
+.profile .date {
+  margin-left: auto;
+  font-size: 0.9rem;
+  color: var(--text-color-secondary);
+}
+
+.postDetails {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0;
+  border-bottom: 1px solid var(--commentbox-border);
+}
+
+.postDetails span {
+  font-size: 0.9rem;
+  color: var(--text-color-secondary);
+}
+
+.likes {
+  display: flex;
+  float: right;
+}
+
+strong {
+  color: var(--color-strong);
+}
+
+@media (max-width: 768px) {
+  .postCard {
     margin-bottom: 20px;
-    cursor: pointer;
-    background-color: var(--card-background-color);
-    color: var(--text-color-darker);
   }
-  
+
   .postCard img {
-    width: 100%;
-    max-height: 300px;
-    object-fit: cover;
+    height: auto;
   }
-  
-  .postCard .btn {
-    padding: 0.25rem 0.5rem;
-    font-size: 0.8rem;
-    margin: 0 5px;
-    min-width: 80px;
-    color:var(--button-postcard-text-color);
-  }
-  
-  .profile {
-    display: flex;
-    align-items: center;
-    padding: 8px 12px;
-    border-bottom: 1px solid var(--commentbox-border);
-  }
-  
+
   .profile img {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    margin-right: 8px;
+    width: 30px;
+    height: 30px;
   }
-  
-  .profile span {
-    margin-right: 10px;
-    font-weight: bold;
-    color: var(--text-color-secondary);
+
+  .postCard .btn {
+    padding: 0.25rem 0.4rem;
+    font-size: 0.7rem;
+    color: var(--button-postcard-text-color);
   }
-  
-  .profile .date {
-    margin-left: auto;
-    font-size: 0.9rem;
-    color: var(--text-color-secondary);
-  }
-  
+
   .postDetails {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 0;
-    border-bottom: 1px solid var(--commentbox-border);
+    flex-direction: column;
+    align-items: flex-start;
   }
-  
+
   .postDetails span {
-    font-size: 0.9rem;
-    color: var(--text-color-secondary);
+    margin-top: 5px;
   }
-  
-  .likes {
-    display: flex;
-    float: right;
-  }
-  
-  strong {
-    color: var(--color-strong);
-  }
-  
-  @media (max-width: 768px) {
-    .postCard {
-      margin-bottom: 20px;
-    }
-  
-    .postCard img {
-      height: auto;
-    }
-  
-    .profile img {
-      width: 30px;
-      height: 30px;
-    }
-  
-    .postCard .btn {
-      padding: 0.25rem 0.4rem;
-      font-size: 0.7rem;
-      color:var(--button-postcard-text-color);
-    }
-  
-    .postDetails {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  
-    .postDetails span {
-      margin-top: 5px;
-    }
-  }
-  
+}
